# robot

./: .gitignore  README.md
01python_advanced/: README.md
02math_basic/: README.md  day01.ipynb  day02.ipynb  作业.ipynb
03data_analysis/: Lesson01  Python Basic and Jupyter Notebook.ipynb  Pandas练习.ipynb  locations.csv  (+1 more)
04c++_advanced/: README.md
04c++_advanced/05面向对象/: 02override_default_copy_construct_bug.cpp  03override_default_copy_construct_00.cpp  03override_default_copy_construct_01.cpp  05static_member.cpp  06friend.cpp  07operator_overload_global_func.cpp  07operator_overload_member_func.cpp  08operator_overload_cout.cpp  09operator_overload_cin.cpp  11operator_overload_call.cpp  CMakeLists.txt
05qt/01qt_tmpl/: CMakeLists.txt
05qt/01qt_tmpl/src/: ZcbWindow.cpp  ZcbWindow.h  main.cpp
05qt/02qt_socket/: CMakeLists.txt
05qt/02qt_socket/src/: Client.cpp  Client.h  Server.cpp  Server.h  client_main.cpp  server_main.cpp
06ros/ws01/kdl_demo/: CMakeLists.txt  demo.cpp  ur5_fk.cpp  ur5_ik_lma.cpp  ur5_ik_nr.cpp  ur5_ik_nr_jl.cpp
07_2d_cv/01opencv_basic/: CMakeLists.txt
07_2d_cv/01opencv_basic/image_effects/: 04_image_color_reverse.cpp  06_image_frosted_glass.cpp  07_image_relief.cpp
07_2d_cv/01opencv_basic/image_operation/: 01_read_image.cpp  04_image_cut.cpp  07_image_shift.cpp  09_image_affine.cpp
07_2d_cv/02opencv_advanced/: 01_image_threshold.cpp  06_contours.cpp  08_video_process.cpp  CMakeLists.txt
07_2d_cv/02opencv_advanced/image_conv/: 03_filter_gaussian.cpp  05_scharr.cpp  07_image_sharp.cpp
07_2d_cv/opencv_advanced/: 01_image_threshold.cpp  07_face_detect.cpp  CMakeLists.txt
07_2d_cv/opencv_advanced/image_conv/: 01_filter_mean.cpp  02_filter_median.cpp
07_2d_cv/opencv_advanced/images/: README.md
07_2d_cv/opencv_basic/: CMakeLists.txt
07_2d_cv/opencv_basic/image_beautify/: 01_image_brightness.cpp  02_image_hist.cpp
07_2d_cv/opencv_basic/image_effects/: 05_image_mosaic.cpp
07_2d_cv/opencv_basic/image_operation/: 02_write_image.cpp  03_image_info.cpp  06_image_scale.cpp  08_image_rotate.cpp
07_2d_cv/opencv_basic/images/: README.md
07_2d_cv/opencv_project/: 03_rotate_qiebian.cpp  04_detect_line.cpp  07_road_line_detect.cpp  CMakeLists.txt  README.md
07_2d_cv/opencv_project/opencv_advanced/: 02_image_adaptive_threshold.cpp  03_image_threshold_otsu.cpp  04_hsv.cpp  05_hsv_split_by_color.cpp
07_2d_cv/opencv_project/opencv_advanced/image_conv/: 04_sobel.cpp  06_laplacian.cpp  08_canny.cpp  09_bilateral_filter.cpp
07_2d_cv/opencv_project/opencv_basic/image_beautify/: 03_image_equalization.cpp  04_image_color_equalization.cpp
07_2d_cv/opencv_project/opencv_basic/image_effects/: 01_image_fusion.cpp  02_image_gray.cpp  03_image_gray_reverse.cpp  08_image_draw.cpp  09_image_mouse_evt.cpp
07_2d_cv/opencv_project/opencv_basic/image_operation/: 05_image_mirror.cpp  10_image_pyramid.cpp
07_2d_cv/opencv_project/opencv_extra/: 05_image_yanzhengma.cpp  07_hough_circle.cpp  08_perspective.cpp  09_perspective2.cpp  10_template_match.cpp  12_water_shed.cpp  14_distance_transform.cpp  CMakeLists.txt
08camera_calibration_and_object_detect/01calibration/: 01_calibration_chessboard.cpp  01calibration_chessboard.xml  02_calibration_chessboard_video.cpp  02calibration_chessboard_video.xml  02calibration_chessboard_video.yml  03_calibration_circleboard_video.cpp  04_calibration_a_circleboard_video.cpp  05_undistort.cpp  06_undistort.cpp  CMakeLists.txt  README.md
08camera_calibration_and_object_detect/03object_detect/02fld_line_dector/: 01fld_line_dector.cpp  CMakeLists.txt
09_3d_cv/01pcl_basic/: 01main.cpp  03pcl_visualizer.cpp  04pcl_transform01手动填充参数.cpp  04pcl_transform02使用仿射变换.cpp  05_pcl_deserialize.cpp  06_pcl_serialize.cpp  07_kd_tree.cpp  08_oc_tree.cpp  CMakeLists.txt  generate_random_float_by_cpp.cpp
09_3d_cv/01pcl_basic/01pcl_basic/: 02cloud_viewer.cpp  03pcl_visualizer.cpp  CMakeLists.txt
09_3d_cv/01pcl_basic/09_generate_pcd_data/: 1.pcd  README.md  generate_pcd_data.py
09_3d_cv/02pcl_advanced/: 01pass_through.cpp  02downsample_voxel_grid.cpp  03statistical_removal.cpp  04condition_removal.cpp  05radius_removal.cpp  06pointcloud2depth_image.cpp  07border_from_depth.cpp  08narf_keypoint_extraction.cpp  09ransac_RANdom_SAmple_Consensus.cpp  10_normal_estimation01.cpp  10_normal_estimation02.cpp  10_normal_estimation03.cpp  CMakeLists.txt
09_3d_cv/03pcl_extra/: 01_iterative_closet_point_icp.cpp  02_normal_distributions_transform_ndt.cpp  03_interactive_icp.cpp  04_point_feature_hist_pfh.cpp  CMakeLists.txt  README.md
09_3d_cv/04pcl_application/: 02resampling.cpp  03moment_of_inertia.cpp  04pc_template_match.cpp  CMakeLists.txt  README.md
09_3d_cv/04pcl_application/01pc_segmentation/: 01planar_segmentation.cpp  03_cluster_extraction.cpp
09_3d_cv/04pcl_application/pc_segmentation/: 02_cylinder_segementation.cpp
11projects/09webots/webots_pro/pro02/controllers/my_controller/: CMakeLists.txt
11sim_projects/01gazebo/04gazebo_plugins/velodyne_plugin/: CMakeLists.txt
11sim_projects/05eg2/src/eg2_description/: package.xml
11simu_projects/01gazebo/04gazebo_plugins/test_velodyne_plugin/: CMakeLists.txt
14ros1_nodelets/nodelet_ws/src/hello_pkg/: CMakeLists.txt  nodelet_plugins.xml  package.xml
14ros1_nodelets/nodelet_ws/src/hello_pkg/include/hello_pkg/: fuck.h  fuck2.h
14ros1_nodelets/nodelet_ws/src/hello_pkg/launch/: nodelet.launch  regular_node.launch
14ros1_nodelets/nodelet_ws/src/hello_pkg/src/: fuck.cpp  fuck2.cpp
c++_advanced/05面向对象/: 01default_copy_construct.cpp  04const_member_function.cpp  10operator_overload_assign.cpp  CMakeLists.txt  README.md
c++_advanced/13IO操作/: 00boolalpha.cpp  02integer_output.cpp  03float_output.cpp  05istringstream.cpp  06ostringstream.cpp  CMakeLists.txt
c++_advanced/18make_cmake/: CMakeLists.txt
c++_advanced/18make_cmake/sub01/: CMakeLists.txt
c++_advanced/18make_cmake/sub02/: CMakeLists.txt  main.cpp
c++_advanced/18make_cmake/sub02/third_lib/include/: shit.h
c++_advanced/18make_cmake/sub02/third_lib/src/: shit.cpp
c++_advanced/18make_cmake/third_lib/: README.md
(+1021 files in other folders)
