cmake_minimum_required(VERSION 2.6)
project(13IO操作)
set(CMAKE_CXX_STANDARD 11)


add_executable(00boolalpha 00boolalpha.cpp)

add_executable(02integer_output 02integer_output.cpp)

add_executable(03float_output 03float_output.cpp)

add_executable(04noskipws 04noskipws.cpp)


add_executable(05istringstream 05istringstream.cpp)
add_executable(06ostringstream 06ostringstream.cpp)
add_executable(07stringstream 07stringstream.cpp)


add_executable(08file_op_ofstream 08file_op_ofstream.cpp)
add_executable(09file_op_ifstream 09file_op_ifstream.cpp)

